// Vitest Snapshot v1

exports[`Component: HelloWorld > Mounts properly - shallow mount 1`] = `
"<div class=\\"title\\">Hello World</div>
<bye-stub></bye-stub>"
`;

exports[`Component: HelloWorld > Mounts properly 1`] = `
"<div class=\\"title\\">Hello World</div>
<div class=\\"title\\">Bye</div>"
`;
